--- a/src/assets/style/object/project/_section.scss
+++ b/src/assets/style/object/project/_section.scss
@@ -244,6 +244,25 @@ secttion-Features
       &:last-child {
         padding-bottom: 0;
         border-bottom: none;
+        @include mq_down(sp) {
+          .bottom-item {
+            padding-left: 30px;
+            .ttl-features {
+              margin-top: 22px;
+              letter-spacing: 0.162rem;
+            }
+            .img-features03 {
+              img {
+                width: 85%;
+                margin: 0 auto;
+                margin-left: -10px;
+              }
+            }
+          }
+          .des {
+            margin-top: 25px!important;
+          }
+        }
       }
 
       &:nth-child(2) {
@@ -251,11 +270,12 @@ secttion-Features
         @include mq_down(sp) {
           margin-left: 0;
           padding-right: 0;
-         padding-left: 10px;
+          padding-left: 10px;
 
          .bottom-item {
-          padding-left: 17px;
-          padding-right: 20px;
+          padding-left: 20px;
+          padding-right: 25px;
+          padding-top: 4px;
          }
         }
         .top-item {
@@ -283,10 +303,11 @@ secttion-Features
           .info-feature {
             order: 1;
             @include mq_down(sp) {
-              padding-left: 7px;
+              padding-left: 10px;
+              margin-top: 16px;
               .ttl {
-                padding-left: 10px;
-                letter-spacing: 0;
+                padding-left: 0;
+                letter-spacing: 0.3rem;
               }
             }
           }
@@ -350,6 +371,7 @@ secttion-Features
         }
         @include mq_down(sp) {
           @include fs (30, 50);
+          letter-spacing: 0.3rem;
         }
       }
 
@@ -358,7 +380,9 @@ secttion-Features
         font-weight: 400;
         margin-top: 10px;
         @include mq_up(pc) {
-          @include fs (20,40);
+          margin-top: 17px;
+          @include fs (20,32);
+          letter-spacing: -0.11rem;
         }
       }
 
@@ -396,6 +420,7 @@ secttion-Features
             width: 15px;
             height: 15px;
             top: 10px;
+            left: -8px
           }
         }
 
@@ -404,9 +429,10 @@ secttion-Features
         }
 
         @include mq_down(sp) {
-          padding: 0 0 15px 30px;
+          margin-top: 34px;
+          padding: 0 0 15px 18px;
           @include fs(22,32);
-          margin-top: 10px;
+          letter-spacing: 0.2rem;
         }
       }
 
@@ -420,6 +446,9 @@ secttion-Features
         margin-top: 53px;
         &:last-child {
           margin-top: 53px;
+          @include mq_down(sp) {
+            margin-top: 45px;
+          }
           .ttl-features {
             margin-top: 20px;
           }
@@ -439,7 +468,7 @@ secttion-Features
           text-align: center;
           @include mq_down(sp) {
             width: 100%;
-            margin-top: 25px;
+            margin-top: 22px;
           }
         }
         .ttl-features {
@@ -455,8 +484,12 @@ secttion-Features
         margin-left: -6px;
         letter-spacing: 0.18rem;
         @include mq_down(sp) {
-          margin-top: 14px;
+          margin-top: 12px;
           @include fs(18,30);
+          margin-left: -10px;
+          &:nth-child(n+3) {
+            margin-top: 2px;
+          }
         }
       }
       .img-features03 {
@@ -478,11 +511,11 @@ CASE STUDY
 
 ------------------------------------------------------------------------------------------- */
 .case-study {
-  padding: 100px 0 113px;
-  background: center/cover no-repeat url("../images/bg_case-study.png");
+  padding: 100px 0 150px;
+  background: top/cover no-repeat url("../images/bg_case-study.png");
   background-size: cover;
   @include mq_down(sp) {
-    padding: 80px 0 45px;
+    padding: 80px 0 84px;
     background: top/cover no-repeat url("../images/bg_case-study-sp.png");
   }
   .ttl-en {
@@ -502,13 +535,17 @@ CASE STUDY
   // }
   .slider {
     padding-bottom: 115px;
-    margin-right: -520px;
+    margin-right: -460px;
     padding-top: 50px;
+    overflow: hidden;
+    position: relative;
     @include mq_up(pc) {
       padding-top: 110px;
     }
-
-    .slick-slide img {
+    .swiper-notification {
+      display: none;
+    }
+    .swiper-slide img {
       @include mq_down(sp) {
         box-shadow: 0px 4px 15px #00000054;
         border-bottom-left-radius: 100px;
@@ -516,59 +553,66 @@ CASE STUDY
     }
 
     @include mq_down(sp) {
-      padding-bottom: 100px;
-      padding-top: 93px;
+      padding: 93px 20px 146px 20px;
       margin-right: 0;
     }
-    .slick-prev {
+    .swiper-button-prev {
       position: absolute;
       left: 0;
       top: auto;
-      bottom: -38px;
+      bottom: -0;
       width: 78px;
       height: 78px;
-      &::before {
+      &::after {
         display: none;
+      }
+      &.swiper-button-disabled {
+        opacity: 1;
       }
 
       @include mq_down(sp) {
         width: 60px;
         height: 60px;
-        left: 10px;
-        bottom: -25px;
+        left: 17px;
+        bottom: 26px;
       }
     }
-    .slick-next {
+    .swiper-button-next {
       position: absolute;
       left: 130px;
       top: auto;
-      bottom: -38px;
+      bottom: 0;
       width: 78px;
       height: 78px;
-      &::before {
+      &::after {
         display: none;
+      }
+      &.swiper-button-disabled {
+        opacity: 1;
       }
 
       @include mq_down(sp) {
         width: 60px;
         height: 60px;
         left: auto;
-        right: 10px;
-        bottom: -25px;
+        right: 27px;
+        bottom: 26px
       }
     }
-    .slick-dots {
-      bottom: 100px;
+    .swiper-pagination {
+      display: none;
       @include mq_down(sp) {
-        bottom: 75px;
-      }
-      li {
-        margin-left: 3px;
-        margin-right: 3px;
+        display: block;
+        bottom: 100px;
+        span {
+          background: #fff;
+          width: 10px;
+          height: 10px;
+        }
       }
     }
   }
-  .slick-list {
+  .swiper-list {
     padding: 0!important;
   }
   .slider-item {
@@ -577,18 +621,20 @@ CASE STUDY
     border-bottom-right-radius: 65px;
     display: block;
     margin-right: 60px;
+    min-width: 340px;
 
     @include mq_up(pc) {
-      margin: 0 15px;
+      margin: 0;
     }
 
     @include mq_down(sp) {
-      margin: 0 20px;
+      width: 100%;
+      min-width: 100%;
     }
 
     .thumb-slider {
       img {
-        border-bottom-left-radius: 100px;
+        border-bottom-left-radius: 30%;
         box-shadow: 0px 4px 15px #00000054;
       }
     }
@@ -651,6 +697,7 @@ CASE STUDY
         height: auto;
         margin-top: 8px;
         @include fs(15,24);
+        letter-spacing: -0.06rem;
       }
     }
     .text-use {
